Change image source from photo1.jpg to photo1.png

--- a/Valentine.html
+++ b/Valentine.html
@@ -71,7 +71,7 @@ h1 {
     <h1>Happy Valentine’s Day</h1>
 
     <div class="slideshow">
-        <img src="photo1.jpg">
+        <img src="photo1.png">
         <img src="photo2.jpg">
         <img src="photo3.jpg">
     </div>
