Update image sources in slideshow section

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ h1 {
     <h1>Happy Valentine’s Day</h1>
 
     <div class="slideshow">
-        <img src="photo1.png">
-        <img src="photo2.jpg">
-        <img src="photo3.jpg">
+<img src="Photo1.PNG">
+<img src="Photo2.JPG">
+<img src="Photo3.jpg">
     </div>
 
     <div class="message">
