--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ h1 {
     opacity: 0;
     transform: translateY(20px);
     transition: all 1s ease;
+    margin-top: 20px;
 }
 
 .slideshow.show {
@@ -63,6 +64,15 @@ h1 {
     font-weight: bold;
     margin-top: 20px;
     cursor: pointer;
+}
+
+.player {
+    display: none;
+    margin-top: 20px;
+}
+
+.player.show {
+    display: block;
 }
 
 .heart {
@@ -93,6 +103,17 @@ h1 {
         Play Our Song
     </div>
 
+    <div class="player" id="player">
+        <iframe style="border-radius:12px"
+            src="https://open.spotify.com/embed/track/3mI9Z256VhQI6VAHRxFqUf"
+            width="100%"
+            height="152"
+            frameBorder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+        </iframe>
+    </div>
+
     <div class="slideshow" id="slideshow">
         <img src="Photo1.PNG">
         <img src="Photo2.JPG">
@@ -102,10 +123,7 @@ h1 {
 
 <script>
 function playSong() {
-    // Open the song
-    window.open("https://open.spotify.com/track/3mI9Z256VhQI6VAHRxFqUf", "_blank");
-
-    // Reveal the photos
+    document.getElementById("player").classList.add("show");
     document.getElementById("slideshow").classList.add("show");
 }
 
