--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
     </div>
 
     <div class="button" onclick="playSong()">
-        Play Our Song
+        Press Here!❤️
     </div>
 
     <!-- Audio -->
